about content chineese and menu headings

--- a/chinese-version/about-chinese.html
+++ b/chinese-version/about-chinese.html
@@ -35,14 +35,14 @@
                         <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li class="active"><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
                             <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
-                                    競賽</a></li>
+                                ⽐赛</a></li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -59,14 +59,14 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li class="active"><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
                             <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
-                                    競賽</a></li>
+                                ⽐赛</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -91,9 +91,13 @@
                     <img class="img-kalisz-1" src="slider-images/Kalisz-pic-1.jpg" alt="city, kalisz, view" />
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                    第一次世界大战给卡利什留下了悲惨的印记。1914年8月普鲁士军队摧毁并烧毁 了这座城市。95%的旧城 建筑化为废墟。在1920年代至1930 年代期间恢复城镇
-                    是全国第一次这样的尝试。老城区根据恢复指南和空间重建中心安排，遗憾的 是历史建筑并没有重建第二次世界大战期间卡利什被并入了一个被德国人称为
-                    “Warthegau”的地区。由于纳粹的占领，卡利什的人民饱受压迫和歧视，战后年 代以工业、城市基础设施和社会文化发展为标志
+                1233年后，⻄⾥⻄亚公爵Henry the Bearded将卡利什的定居中⼼搬到了
+                扎沃⻬以北的新地⽅。
+                ⼤约在1257年，波列斯瓦夫王⼦根据希罗达法建⽴了卡利什。该市的内
+                部区域的特点是两条集市街道的主轴状布局，⼗字路⼝和位于市中⼼的矩
+                形⼴场。这种中世纪的城镇设计⼀直保留到现在。第⼀次世界⼤战在卡利
+                什留下了悲惨的印记。1914年8⽉，普鲁⼠军队摧毁并烧毁了该镇。95%
+                的⽼城建筑被夷为废墟。
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-3.jpg"
@@ -103,18 +107,28 @@
             </div>
             <div class="about about-right desktop-only">
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                    位于普罗斯纳河谷的卡利什作为大波兰省的第二大城市，琥珀之路的途径点之 一，在公元2世纪左右的亚历山大学者托勒密的著作中首次被提及记录，无可置 否，卡利什十分自豪拥有这一古老的记录。
-                    卡利什占据着非洲大陆的南北贸易路线和东西贸易路线交汇处的有利地理位置 ，同时也代表卡利什对不同民族、国家、宗教和文化的新来者的开放.
-                    （9世纪/10世纪-13世纪）的一座早期中世纪城堡城市是最伟大的钢琴家城镇中 心之一。 1233年以后，一位西里西亚公爵，胡须亨利，将卡利什的中心迁移到了
-                    Zawodzie以北的一个新地方。大约1257年，虔诚的Bolesław王子根据当时的 (Środa)法律建立了卡利什。城市的内部区域的特点是两条市场街道的纺锤形布 局，十字街道和位于市中心的矩形广场
-                    这个中世纪城镇设计一直保留到现在。
+                    位于普罗斯纳河⾕的卡利什作为⼤波兰省的第⼆⼤城市，琥珀之路的途径点之
+                    ⼀，在公元2世纪左右的亚历⼭⼤学者托勒密的著作中⾸次被提及记录。根据
+                    学者的说法，托勒密的卡利⻄亚可以与今天的卡利什相称。这⼀记录使卡利什
+                    作为波兰最古⽼的有书⾯记载的城市⽽感到⾃豪。位于该⼤陆从北到南和从⻄
+                    到东的贸易路线⼗字路⼝的有利位置有利于卡利什的发展，并向代表不同⺠
+                    族、⺠族、宗教和⽂化的新来者开放。扎沃⻬（9/10～13世纪）的中世纪早期
+                    堡城是⽪亚斯特市中⼼之⼀。
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-2.jpg"
                         alt="city, kalisz, view" />
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                    1975年至1998年间，它是卡利什省的首府。在一个新的行政区划中，这座城市 隶属于大波兰省拥有让人着迷的美丽。在这里，历史和现实交织在一起，形成 了这里独特的魅力。 </br></br>
+                    20世纪20～30年代，该市的修复是波兰全国范围内的⾸次冒险。尽管历
+                    史建筑没有重建，⽼城中⼼已根据修复指南和空间安排重建。在第⼆次世
+                    界⼤战期间，卡利什被并⼊⼀个被德国⼈称为“Warthegau”的地区。纳粹
+                    占领期间是卡利什⼈⺠被压迫和歧视的时期。战后⼏年以⼯业、城市基础
+                    设施和社会⽂化发展为标志。1992年，卡利什教区成⽴。如今卡利什占
+                    地70平⽅公⾥，约有11万居⺠。从1975年到1998年，它是卡利什省的⾸
+                    府。在⼀个新的⾏政区划中，该市位于维尔科波尔斯基省。卡利什以其魔
+                    法般的美丽着迷，过去与现在交织在⼀起，在卡利什形成了独特的⽓候。
+                    </br></br>
                     <a class="about-a-site" href="https://www.kalisz.pl/miasto/o-miescie/historia"
                         target="_blank">https://www.kalisz.pl/miasto/o-miescie/historia</a>
 
@@ -134,11 +148,13 @@
                     <img class="img-kalisz-1" src="slider-images/Kalisz-pic-1.jpg" alt="city, kalisz, view" />
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                    位于普罗斯纳河谷的卡利什作为大波兰省的第二大城市，琥珀之路的途径点之 一，在公元2世纪左右的亚历山大学者托勒密的著作中首次被提及记录，无可置 否，卡利什十分自豪拥有这一古老的记录。
-                    卡利什占据着非洲大陆的南北贸易路线和东西贸易路线交汇处的有利地理位置 ，同时也代表卡利什对不同民族、国家、宗教和文化的新来者的开放.
-                    （9世纪/10世纪-13世纪）的一座早期中世纪城堡城市是最伟大的钢琴家城镇中 心之一。 1233年以后，一位西里西亚公爵，胡须亨利，将卡利什的中心迁移到了
-                    Zawodzie以北的一个新地方。大约1257年，虔诚的Bolesław王子根据当时的 (Środa)法律建立了卡利什。城市的内部区域的特点是两条市场街道的纺锤形布 局，十字街道和位于市中心的矩形广场
-                    这个中世纪城镇设计一直保留到现在。
+                    位于普罗斯纳河⾕的卡利什作为⼤波兰省的第⼆⼤城市，琥珀之路的途径点之
+                    ⼀，在公元2世纪左右的亚历⼭⼤学者托勒密的著作中⾸次被提及记录。根据
+                    学者的说法，托勒密的卡利⻄亚可以与今天的卡利什相称。这⼀记录使卡利什
+                    作为波兰最古⽼的有书⾯记载的城市⽽感到⾃豪。位于该⼤陆从北到南和从⻄
+                    到东的贸易路线⼗字路⼝的有利位置有利于卡利什的发展，并向代表不同⺠
+                    族、⺠族、宗教和⽂化的新来者开放。扎沃⻬（9/10～13世纪）的中世纪早期
+                    堡城是⽪亚斯特市中⼼之⼀。
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-2.jpg"
@@ -151,9 +167,13 @@
             </div>
             <div class="about about-right mobile-only">
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                    第一次世界大战给卡利什留下了悲惨的印记。1914年8月普鲁士军队摧毁并烧毁 了这座城市。95%的旧城 建筑化为废墟。在1920年代至1930 年代期间恢复城镇
-                    是全国第一次这样的尝试。老城区根据恢复指南和空间重建中心安排，遗憾的 是历史建筑并没有重建第二次世界大战期间卡利什被并入了一个被德国人称为
-                    “Warthegau”的地区。由于纳粹的占领，卡利什的人民饱受压迫和歧视，战后年 代以工业、城市基础设施和社会文化发展为标志
+                    1233年后，⻄⾥⻄亚公爵Henry the Bearded将卡利什的定居中⼼搬到了
+                    扎沃⻬以北的新地⽅。
+                    ⼤约在1257年，波列斯瓦夫王⼦根据希罗达法建⽴了卡利什。该市的内
+                    部区域的特点是两条集市街道的主轴状布局，⼗字路⼝和位于市中⼼的矩
+                    形⼴场。这种中世纪的城镇设计⼀直保留到现在。第⼀次世界⼤战在卡利
+                    什留下了悲惨的印记。1914年8⽉，普鲁⼠军队摧毁并烧毁了该镇。95%
+                    的⽼城建筑被夷为废墟。
 
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
@@ -161,7 +181,15 @@
                         alt="city, kalisz, view" />
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                    1975年至1998年间，它是卡利什省的首府。在一个新的行政区划中，这座城市 隶属于大波兰省拥有让人着迷的美丽。在这里，历史和现实交织在一起，形成 了这里独特的魅力。 </br></br>
+                    20世纪20～30年代，该市的修复是波兰全国范围内的⾸次冒险。尽管历
+                    史建筑没有重建，⽼城中⼼已根据修复指南和空间安排重建。在第⼆次世
+                    界⼤战期间，卡利什被并⼊⼀个被德国⼈称为“Warthegau”的地区。纳粹
+                    占领期间是卡利什⼈⺠被压迫和歧视的时期。战后⼏年以⼯业、城市基础
+                    设施和社会⽂化发展为标志。1992年，卡利什教区成⽴。如今卡利什占
+                    地70平⽅公⾥，约有11万居⺠。从1975年到1998年，它是卡利什省的⾸
+                    府。在⼀个新的⾏政区划中，该市位于维尔科波尔斯基省。卡利什以其魔
+                    法般的美丽着迷，过去与现在交织在⼀起，在卡利什形成了独特的⽓候。 
+                    </br></br>
                     <a class="about-a-site" href="https://www.kalisz.pl/miasto/o-miescie/historia"
                         target="_blank">https://www.kalisz.pl/miasto/o-miescie/historia</a>
 
