--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -33,11 +33,11 @@
                     <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                             alt="logo, gold letters, calisia arts" /></a>
                     <ul class="nav navbar-nav">
-                        <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                        <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                         <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                         </li>
                         <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
-                        <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
+                        <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">⽐赛</a>
                         </li>
                         <li class="active" class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
@@ -58,7 +58,7 @@
                 <div class="hamburger-list-div">
                     <ul class="hamburger-list">
                         <li class="li-hamburger"><a data-scroll href="index-chinese.html"
-                                class="int-collapse-menu">主要的</a>
+                                class="int-collapse-menu">主⻚</a>
                         </li>
                         <li class="li-hamburger"><a data-scroll href="about-chinese.html"
                                 class="int-collapse-menu">简介</a>
@@ -69,7 +69,7 @@
                         <li class="li-hamburger"><a data-scroll href="contact-chinese.html"
                                 class="int-collapse-menu">联系方式</a></li>
                         <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
-                                競賽</a></li>
+                            ⽐赛</a></li>
 
                     </ul>
                     <div class="languages-2">
