menu home and competition - all

--- a/chinese-version/team-chinese.html
+++ b/chinese-version/team-chinese.html
@@ -29,7 +29,7 @@
                         <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li class="active"><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
@@ -37,7 +37,7 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
-                                競賽</a></li>
+                                ⽐赛</a></li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -52,7 +52,7 @@
                       
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li class="active"><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
@@ -60,7 +60,7 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
-                                競賽</a></li>
+                                ⽐赛</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
