--- a/chinese-version/contact-chinese.html
+++ b/chinese-version/contact-chinese.html
@@ -36,14 +36,14 @@
                         <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
                             <li class="active"><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
-                                class="int-collapse-menu">比赛规则</a></li>
+                                class="int-collapse-menu">⽐赛</a></li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
@@ -65,7 +65,7 @@
                                 競賽</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
-                                class="int-collapse-menu">比赛规则</a></li>
+                                class="int-collapse-menu">⽐赛</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
