--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -33,7 +33,7 @@
                         <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a></li>
+                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
@@ -41,7 +41,7 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
-                                競賽</a></li>
+                                ⽐赛</a></li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主要的</a>
+                            <li class="li-hamburger"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="about-chinese.html"
                                     class="int-collapse-menu">简介</a>
@@ -65,7 +65,7 @@
                                     class="int-collapse-menu">联系方式</a></li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                         class="int-collapse-menu">
-                                        競賽</a></li>
+                                        ⽐赛</a></li>
                                     
                         </ul>
                         <div class="languages-2">
