--- a/team.html
+++ b/team.html
@@ -219,6 +219,64 @@
                 </div>
 
             </div>
+
+            <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                <div class="small-class-team">
+                    <img class="image-1" src="slider-images/Qi.jpg" alt="team member" />
+                    <h1 class="h1-team-members">LELIN QI</h1>
+                </div>
+                <div class="team-text">
+                    <p class="p-team">
+                        Born on April 13, 1995 in Guangdong, China, and began to
+                        learn the piano at the age of four. She obtained a
+                        bachelor's diploma from the Xinghai Academy of Music in
+                        China and graduated master’s degree with the highest
+                        marks under the supervision of prof. Jerzy Sterczyński at
+                        the Frederic Chopin University of Music in Warsaw.
+                        Currently, she is continuing her doctorate studies in the
+                        piano chamber music department at the Frederic Chopin
+                        University of Music under the supervision of prof.
+                        Katarzyna Jankowska, meanwhile she’s also completing
+                        her postgraduate studies under the supervision of prof.
+                        Mariola Cieniawa at the Krzysztof Penderecki Academy of
+                        Music in Kraków.
+                        Lelin won several significant awards in such competitions
+                        as First prize in the Chinese Open Piano Competition in
+                        2017, Silver Award in the professional musician category of
+                        the International Online Music Talent Competition in 2020,
+                        Third Prize in the International Piano Competition "Chopin
+                        Remembrance Awards" in Hong Kong in 2015, Special
+                        Individual Prize of International Piano Forum "Bieszczady
+                        without borders" in Poland in 2019. She was also a laureate of the 2019 XXXII Tournament "Prince
+                        Antoni Radziwiłł Award" in Antonin, Poland.
+                        Lelin has given concerts at such essential concert halls in Poland: the National Philharmonic in
+                        Warsaw, the Royal Castle in Warsaw, and the Krzysztof Penderecki European Music Center in
+                        Lusławice. She has performed in many countries, such as China, Poland, the Czech Republic,
+                        Austria, and Belgium. She also played recitals at the 38th International "Chopin in autumn leaves"
+                        Festival and the "VI International Ignacy Jan Paderewski” Festival. In 2019, she showed up at the
+                        celebration of “The 70th anniversary of establishing diplomatic relations between China and Poland
+                        " and played for the Chinese embassy in Poland. In January 2022, as a representative of the piano
+                        departments of the Academy of Music in Kraków and the Fryderyk Chopin Universikty of Music,
+                        she played two successful concerts to celebrate Alexander Scriabin's 150th birthday. In July 2022,
+                        Lelin completed the recording of Brahms - Piano Quartet No. 1 in G minor, Op.25 on Polish
+                        National Radio.
+                        Currently, she is a regular artist performing at the Chopin Salon in Warsaw and the "Chopin en
+                        Vacances" International Festival. Andrzej Leraczyk - Director of the Culture and Arts Department of
+                        the Ostrów Wielkopolski City Hall once commented on her performance: "What a bold, perfect
+                        interpretation, such "revolutionary romanticism"! This young Chinese pianist attracted attention...
+                        Lelin Qi, remember this name!
+                        In August 2022, Lelin appeared in one of the most influential newspapers - "Nouvelles d'Europe",
+                        as well as some other overseas Chinese newspapers in other countries, such as France, Italy,
+                        Portugal, Germany, and the United Kingdom.
+                        During her artistic life, she has gained experience working with many renowned pianists such as
+                        Dmitri Alexeev, Philippe Giusiano, Andrzej Jasiński, Mikhail Voskresensky, and Anna Malikova. 
+
+                    </p>
+                </div>
+
+            </div>
+
+
         </div>
     </div>
  
