tram qi all and rules menu chineese

--- a/chinese-version/team-chinese.html
+++ b/chinese-version/team-chinese.html
@@ -180,6 +180,43 @@
                 </div>
 
             </div>
+
+            <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                <div class="small-class-team">
+                    <img class="image-1" src="slider-images/Qi.jpg" alt="team member" />
+                    <h1 class="h1-team-members">戚乐琳</h1>
+                </div>
+                <div class="team-text">
+                    <p class="p-team">
+                    1995年4⽉13⽇出⽣于中国⼴东，四岁开始学习钢琴。本科毕业于中国星海⾳乐学院钢琴系，师从
+                    陈丹教授。⽽后获得华沙国⽴肖邦⾳乐学院钢琴独奏硕⼠学位，在系主任耶⽇•斯特⻬因斯基 (Jerzy
+                    Sterczyński) 教授的指导下以最⾼分毕业。⽬前，她继续留校攻读钢琴室内乐专业博⼠学位，师从钢
+                    琴室内乐系主任卡塔⽇娜·扬科斯卡 (Katarzyna Jankowska)，同年她还⼊读了波兰克拉科夫国⽴潘
+                    德列茨基⾳乐学院的演奏家⽂凭，师从钢琴系主任⻢⾥奥拉·切尼亚瓦 (Mariola Cieniawa) 。
+                    曾获2020年国际在线音乐大赛专业演奏组银奖、2019年波兰“无国界国际钢琴论坛”特别个人奖、2017
+                    年中国“和谐之音”钢琴公开赛专业公开组第一名、2015年香港“肖邦纪念奖”国际钢琴比赛第三名。
+                    戚乐琳还曾是2019 年在波兰安东宁举办的第32届“安东尼·拉齐维乌王子奖”肖邦钢琴比赛的获得者。
+                    戚乐琳曾在以下波兰最重要的音乐厅举办过音乐会：华沙国家爱乐厅、华沙皇家城堡和克里斯托弗•
+                    潘德列茨基欧洲音乐中心。演出足迹遍布：中国、波兰、捷克共和国、奥地利和比利时。
+                    2019年第38届“Chopin in Autumn Leaves”国际肖邦音乐节，戚乐琳获邀于闭幕式中举办个人独奏
+                    会，在2019年“第VI届帕德列夫斯基国际音乐节”中作为唯一的亚洲面孔，成功举办了肖邦专场独奏
+                    会。戚乐琳还曾在中国驻波兰大使馆举办的“庆祝中波建交70周年”庆典音乐会上演奏。2022年1月，
+                    作为肖邦音乐学院及克拉科夫音乐学院钢琴系的代表，她成功举办了两场音乐会，庆祝亚历山大斯
+                    克里亚宾诞辰150周年。2022年7月，戚乐琳在波兰国家广播电台成功完成了勃拉姆斯——G小调第
+                    一钢琴四重奏，Op.25全套的录制。
+                    目前，她是华沙肖邦沙龙和“Chopin en Vacances”肖邦国际音乐节的常驻艺术家。 Andrzej
+                    Leraczyk（波兰Ostrów Wielkopolski 市艺术文化部部长）曾评价她的表演：“大胆而完美地诠释了
+                    ‘革命浪漫主义’！这位年轻的中国钢琴家引起了人们的关注。戚乐琳，记住这个名字！”。
+                    2020年9月，戚乐琳获北京办事处邀请接受波兰旅游局公众号采访。2022年8月，戚乐琳登报于欧洲
+                    最具影响力的华语报刊之一——《欧洲时报》，及其他欧洲侨报如法国青年网、意大利侨网、葡新
+                    报、德国新闻网、英国富中传媒等。
+                    在她的艺术⽣涯中，曾得到世界知名钢琴家如德⽶特⾥·阿列克谢耶夫 (Dmitri Alexeev)、菲利普•朱
+                    夏诺 (Philippe Giusiano)、安杰伊·雅⾟斯基 (Andrzej Jasiński)、安娜·⻢利科娃 (Anna Malikova)、
+                    ⽶哈伊尔·沃斯克列森斯基 (Mikhail Voskresensky)等的指导。
+                    </p>
+                </div>
+
+            </div>
         </div>
     </div>
  
