--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -194,52 +194,95 @@
                 <div class="team-text">
                     <p class="p-team">
                         Łukasz Byrdy jest absolwentem Akademii Muzycznej im. I.J.
-                Paderewskiego w Poznaniu w klasie fortepianu prof. Waldemara
-                Andrzejewskiego i dr hab. Joanny Marcinkowskiej oraz Universität
-                der Künste w Berlinie w klasie fortepianu prof. Klausa Hellwiga.
-                Obecnie pracuje na stanowisku asystenta w katedrze fortepianu
-                poznańskiej Akademii Muzycznej, jak również na wydziale
-                Artystyczno-Pedagogicznym Uniwersytetu Adama Mickiewicza w
-                Poznaniu. Oprócz niewątpliwie największych sukcesów, do których
-                należy zaliczyć III nagrodę na Międzynarodowym Konkursie
-                Pianistycznym im. Fryderyka Chopina w Pekinie oraz
-                zakwalifikowanie się do II etapu XVII Międzynarodowego Konkursu
-                Pianistycznego im. Fryderyka Chopina w Warszawie, jest również
-                m.in. laureatem II nagrody na 17 Międzynarodowym Konkursie
-                Pianistycznym w Hanowerze, III nagrody na Międzynarodowym
-                Konkursie Pianistycznym “in memoriam Pietro Iadeluca" w Rzymie,
-                wyróżnienia i nagrody specjalnej na Międzynarodowym Konkursie
-                Pianistycznym “Halina Czerny - Stefańska in memoriam” w
-                Poznaniu oraz nagrody specjalnej i kilku nagród
-                pozaregulaminowych na Międzynarodowym Konkursie
-                Pianistycznym “Arthur Rubinstein in Memoriam" w Bydgoszczy.
-                Jako kameralista wraz z triem fortepianowym otrzymywał nagrody
-                na konkursach w Polsce, Szwajcarii oraz na Malcie. W wyniku
-                konkursowych przesłuchań został wyróżniony stypendium na
-                udział w międzynarodowych kursach muzycznych w Calgary (2010
-                i 2011 r.) oraz na uczestnictwo w kursie i festiwalu “Aspen Music
-                Festival and School”w USA. Pianista występował na Wystawie
-                Światowej EXPO w Mediolanie, festiwalu Chopin i jego Europa,
-                festiwalu Chopin à Paris, Międzynarodowym Festiwalu I. J.
-                Paderewskiego w Warszawie, a także festiwalach w Moskwie,
-                Chengdu (Chiny) i Dusznikach - Zdrój. W 2014 roku otrzymał tytuł
-                laureata “Estrady młodych" Festiwalu Pianistyki Polskiej w Słupsku.
-                Łukasz Byrdy koncertował w wielu polskich filharmoniach
-                (Narodowej w Warszawie, Poznańskiej, Śląskiej, Dolnośląskiej,
-                Pomorskiej i Opolskiej), jak również w Muzeum Fryderyka Chopina
-                w Warszawie, Żelazowej Woli, Zamku Królewskim i Łazienkach
-                Królewskich w Warszawie, Studiu Koncertowym Polskiego Radia
-                im. W. Lutosławskiego w Warszawie, Sali Koncertowej Narodowej
-                Orkiestry Symfonicznej Polskiego Radia (NOSPR) w Katowicach,
-                jak również Europejskim Centrum Muzyki Krzysztofa
-                Pendereckiego w Lusławicach. Artysta prowadzi również ożywioną
-                działalność artystyczną poza granicami kraju - w USA, Kanadzie,
-                Rosji, Austrii, Niemczech, Chinach, Malcie, Norwegii, Francji i
-                Włoszech. W 2017 roku ukazała się debiutancka płyta Łukasza
-                wydana staraniami Fundacji Piotra Klera z koncertami
-                fortepianowymi F. Chopina i W. A. Mozarta. 
+                        Paderewskiego w Poznaniu w klasie fortepianu prof. Waldemara
+                        Andrzejewskiego i dr hab. Joanny Marcinkowskiej oraz Universität
+                        der Künste w Berlinie w klasie fortepianu prof. Klausa Hellwiga.
+                        Obecnie pracuje na stanowisku asystenta w katedrze fortepianu
+                        poznańskiej Akademii Muzycznej, jak również na wydziale
+                        Artystyczno-Pedagogicznym Uniwersytetu Adama Mickiewicza w
+                        Poznaniu. Oprócz niewątpliwie największych sukcesów, do których
+                        należy zaliczyć III nagrodę na Międzynarodowym Konkursie
+                        Pianistycznym im. Fryderyka Chopina w Pekinie oraz
+                        zakwalifikowanie się do II etapu XVII Międzynarodowego Konkursu
+                        Pianistycznego im. Fryderyka Chopina w Warszawie, jest również
+                        m.in. laureatem II nagrody na 17 Międzynarodowym Konkursie
+                        Pianistycznym w Hanowerze, III nagrody na Międzynarodowym
+                        Konkursie Pianistycznym “in memoriam Pietro Iadeluca" w Rzymie,
+                        wyróżnienia i nagrody specjalnej na Międzynarodowym Konkursie
+                        Pianistycznym “Halina Czerny - Stefańska in memoriam” w
+                        Poznaniu oraz nagrody specjalnej i kilku nagród
+                        pozaregulaminowych na Międzynarodowym Konkursie
+                        Pianistycznym “Arthur Rubinstein in Memoriam" w Bydgoszczy.
+                        Jako kameralista wraz z triem fortepianowym otrzymywał nagrody
+                        na konkursach w Polsce, Szwajcarii oraz na Malcie. W wyniku
+                        konkursowych przesłuchań został wyróżniony stypendium na
+                        udział w międzynarodowych kursach muzycznych w Calgary (2010
+                        i 2011 r.) oraz na uczestnictwo w kursie i festiwalu “Aspen Music
+                        Festival and School”w USA. Pianista występował na Wystawie
+                        Światowej EXPO w Mediolanie, festiwalu Chopin i jego Europa,
+                        festiwalu Chopin à Paris, Międzynarodowym Festiwalu I. J.
+                        Paderewskiego w Warszawie, a także festiwalach w Moskwie,
+                        Chengdu (Chiny) i Dusznikach - Zdrój. W 2014 roku otrzymał tytuł
+                        laureata “Estrady młodych" Festiwalu Pianistyki Polskiej w Słupsku.
+                        Łukasz Byrdy koncertował w wielu polskich filharmoniach
+                        (Narodowej w Warszawie, Poznańskiej, Śląskiej, Dolnośląskiej,
+                        Pomorskiej i Opolskiej), jak również w Muzeum Fryderyka Chopina
+                        w Warszawie, Żelazowej Woli, Zamku Królewskim i Łazienkach
+                        Królewskich w Warszawie, Studiu Koncertowym Polskiego Radia
+                        im. W. Lutosławskiego w Warszawie, Sali Koncertowej Narodowej
+                        Orkiestry Symfonicznej Polskiego Radia (NOSPR) w Katowicach,
+                        jak również Europejskim Centrum Muzyki Krzysztofa
+                        Pendereckiego w Lusławicach. Artysta prowadzi również ożywioną
+                        działalność artystyczną poza granicami kraju - w USA, Kanadzie,
+                        Rosji, Austrii, Niemczech, Chinach, Malcie, Norwegii, Francji i
+                        Włoszech. W 2017 roku ukazała się debiutancka płyta Łukasza
+                        wydana staraniami Fundacji Piotra Klera z koncertami
+                        fortepianowymi F. Chopina i W. A. Mozarta. 
                     </p>
                 </div>
+
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+                        <img class="image-1" src="slider-images/Qi.jpg" alt="team member" />
+                        <h1 class="h1-team-members">Lelin Qi</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                        Lelin Qi urodzona 13 kwietnia 1995 roku w prowincji Guangdong, w Chinach. Naukę gry na fortepianie
+                        rozpoczęła w wieku czterech lat. Uzyskała stopień licencjata na Akademii Muzycznej Xinghai w
+                        Chinach. Studia magisterskie z najwyższymi ocenami ukończyła pod kierownictwem prof. Jerzego
+                        Sterczyńskiego na Uniwersytecie Muzycznym im. Fryderyka Chopina w Warszawie. Obecnie
+                        kontynuuje naukę na studiach doktoranckich w Katedrze Kameralistyki Fortepianowej na
+                        Uniwersytecie Muzycznym im. Fryderyka Chopina pod kierownictwem prof. Katarzyny
+                        Jankowskiej, jednocześnie realizując także studia podyplomowe pod okiem prof. Marioli Cieniawy
+                        w Akademii Muzycznej w Krakowie.
+                        Zdobyła kilka znaczących nagród w takich konkursach, jak: W 2020 r. - Międzynarodowy Konkurs
+                        Talentów Muzycznych Online - Srebrna Nagroda w kategorii Muzyków Profesjonalnych, W 2019 r.-
+                        Międzynarodowe Forum Fortepianowe "Bieszczady bez granic" 2019 - Nagroda Specjalna, W
+                        2017 r. - Chiński Otwarty Konkurs Fortepianowy - Pierwsza Nagroda, W 2015 r. - Międzynarodowy
+                        Konkurs Fortepianowy "Chopin Remembrance Awards" w Hong Kongu - Trzecia Nagroda. Lelin
+                        została także laureatką XXXII Turnieju "Nagroda Księcia Antoniego Radziwiłła" w roku 2019, w
+                        Polsce.
+                        Występowała w ważnych miejscach w Polsce, takich jak: Filharmonia Narodowa w Warszawie,
+                        Zamek Królewski w Warszawie, Europejskie Centrum Muzyki Krzysztofa Pendereckiego. Dawała
+                        koncerty w wielu krajach, takich jak Chiny, Polska, Czechy, Austria i Belgia. Grała koncerty także
+                        na 38. Międzynarodowym Festiwalu Chopinowskim „Chopin w barwach jesieni liściach”, “VI
+                        Międzynarodowym Festiwalu im. Ignacego Jana Paderewskiego” oraz obchodach „70. rocznicy
+                        nawiązania stosunków dyplomatycznych między Chinami a Polską” dla Chińczyków w ambasadzie
+                        w Polsce. W styczniu 2022 roku, jako reprezentantka Katedr Fortepianu Krakowskiej Akademii
+                        Muzycznej oraz Uniwersytetu Muzycznego Fryderyka Chopina, zagrała dwa udane koncerty dla
+                        uczczenia 150-tych urodzin Aleksandra Skriabina. W lipcu 2022 roku Lelin zakończyła nagranie
+                        Brahmsa - Kwartetu fortepianowego nr 1 g-moll op.25 w Polskim Radiu.
+                        Obecnie jest stałą artystką w Salonie Chopina w Warszawie oraz festiwalu „Chopin en Vacances”.
+                        Andrzej Leraczyk - Dyrektor Działu Kultury i Sztuki ratusza w Ostrowie Wielkopolskim - tak
+                        wypowiedział się o jej występie: „Jakże odważna, perfekcyjna interpretacja, taki "rewolucyjny
+                        romantyzm"! Ta młoda chińska pianistka skupiła uwagę... Lelin Qi, zapamiętajcie to nazwisko!”.
+                        W sierpniu 2022 roku, Lelin pojawiła się w jednej z najbardziej wpływowych gazet - „Nouvelles
+                        d'Europe”, i inne gazety we Francji, Włoszech, Portugalii, Niemczech i Wielkiej Brytanii.
+                        Nabywała doświadczenie pracując ze wspaniałymi pianistami - takimi jak: Dmitri Alexeev, Philippe
+                        Giusiano, Andrzej Jasiński, Mikhail Voskresensky, Anna Malikova.
+                        </p>
+                    </div>
 
             </div>
         </div>
