--- a/team.html
+++ b/team.html
@@ -223,7 +223,7 @@
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                 <div class="small-class-team">
                     <img class="image-1" src="slider-images/Qi.jpg" alt="team member" />
-                    <h1 class="h1-team-members">LELIN QI</h1>
+                    <h1 class="h1-team-members">Lelin Qi</h1>
                 </div>
                 <div class="team-text">
                     <p class="p-team">
