download button - chineese

--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -162,7 +162,8 @@
         <form>
             <a class="download-button" href="Application form .docx" download>
 
-                <p class="download-text-2">Download Application</p>
+                <p class="download-text-2">下载⽐赛报名表
+                </p>
 
             </a>
         </form>
