jury in all menus

--- a/rules.html
+++ b/rules.html
@@ -43,6 +43,8 @@
                             </li>
                             <li class="active"><a data-scroll href="rules.html"
                                     class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a>
+                            </li>
                         </ul>
                         <div class="languages">
                             <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -68,6 +70,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
