--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages">
                             <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -71,6 +72,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
