pln version jury in menu all

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -42,6 +42,7 @@
                                 </li>
                                 <li class="active"><a data-scroll href="rulespl.html"
                                         class="int-collapse-menu">Konkurs</a></li>
+                                <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a>
                             </ul>
                             <div class="languages">
                                 <a href="indexpl.html"><img class="img-flag"
@@ -69,6 +70,7 @@
                                 <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                         class="int-collapse-menu">Kontakt</a></li>
                                 <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                             </ul>
                             <div class="languages-2">
                                 <a href="indexpl.html"><img class="img-flag"
