--- a/polish-version-calisia-web/about-pl.html
+++ b/polish-version-calisia-web/about-pl.html
@@ -41,6 +41,7 @@
                             <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                             </li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages">
                             <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -63,6 +64,7 @@
                             <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                     class="int-collapse-menu">Kontakt</a></li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
