chineese menu jury

--- a/chinese-version/team-chinese.html
+++ b/chinese-version/team-chinese.html
@@ -38,6 +38,8 @@
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
                                 ⽐赛</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
+                            </li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -61,6 +63,9 @@
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
                                 ⽐赛</a></li>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">
+                                评委会</a>
+                            </li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
