--- a/chinese-version/about-chinese.html
+++ b/chinese-version/about-chinese.html
@@ -43,6 +43,8 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
                                 ⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
+                                评委会</a></li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -67,6 +69,8 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
                                 ⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
+                            评委会</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
