--- a/chinese-version/contact-chinese.html
+++ b/chinese-version/contact-chinese.html
@@ -44,6 +44,8 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html"
+                                    class="int-collapse-menu">评委会</a></li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -66,6 +68,8 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html"
+                                    class="int-collapse-menu">评委会</a></li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
