--- a/chinese-version/jury.html
+++ b/chinese-version/jury.html
@@ -25,17 +25,17 @@
             <div class="container">
                 <div class="navbar navbar-default" role="navigation">
                     <div class="navbar-collapse">
-                        <a href="index.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
+                        <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
-                            <li><a data-scroll href="about.html" class="int-collapse-menu">About</a>
+                            <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
+                            <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
-                            <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
-                            <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
+                            <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
+                            <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
-                            <li class="active"><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
+                            <li><a data-scroll href="rules-chinese.html" class="int-collapse-menu">⽐赛</a></li>
+                            <li class="active"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a></li>
                         </ul>
                         <div class="languages">
                             <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -51,17 +51,17 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="index.html" class="int-collapse-menu">Home</a>
+                            <li class="li-hamburger"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="about.html"
-                                    class="int-collapse-menu">About</a>
+                            <li class="li-hamburger"><a data-scroll href="about-chinese.html"
+                                    class="int-collapse-menu">简介</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="team.html" class="int-collapse-menu">Team</a>
+                            <li class="li-hamburger"><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="contact.html"
-                                    class="int-collapse-menu">Contact</a></li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
-                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a>
+                            <li class="li-hamburger"><a data-scroll href="contact-chinese.html"
+                                    class="int-collapse-menu">联系方式</a></li>
+                            <li><a data-scroll href="rules-chinese.html" class="int-collapse-menu">⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
                             </li>
                         </ul>
                         <div class="languages-2">
