--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -42,6 +42,8 @@
                         <li class="active" class="li-hamburger"><a data-scroll href="rules-chinese.html"
                                 class="int-collapse-menu">
                                 ⽐赛</a></li>
+                        <li><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
+                        </li>
                     </ul>
                     <div class="languages">
                         <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -70,6 +72,8 @@
                                 class="int-collapse-menu">联系方式</a></li>
                         <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
                             ⽐赛</a></li>
+                        <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
+                            评委会</a></li>
 
                     </ul>
                     <div class="languages-2">
