--- a/jury.html
+++ b/jury.html
@@ -110,7 +110,7 @@
                 </div>
                 <img class="jury-img mb-5" src="slider-images/Koulianou.jpg">
                 <div class="label-photo">
-                    Evangelia Koulianou,
+                    Evangelia Koulianou
                 </div>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal" data-bs-target="#ModalEvangelia">
