chineese-home page

--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -90,7 +90,7 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">第一届亨利克・  <br>琴比赛 尔国际钢 梅赛</h2>
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">第一届亨利克·  <br>梅尔瑟国际钢琴比赛</h2>
                     <hr class="bottomline">
                 </div>
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
