--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -36,7 +36,7 @@
                         <li><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
                         <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                         </li>
-                        <li><a data-scroll href="team-chinese.html" class="int-collapse-menu">组委会</a></li>
+                        <li><a data-scroll href="team-chinese.html" class="int-collapse-menu"> 团队</a></li>
                         <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">⽐赛</a>
                         </li>
                         <li class="active" class="li-hamburger"><a data-scroll href="rules-chinese.html"
@@ -66,7 +66,7 @@
                                 class="int-collapse-menu">简介</a>
                         </li>
                         <li class="li-hamburger"><a data-scroll href="team-chinese.html"
-                                class="int-collapse-menu">组委会</a>
+                                class="int-collapse-menu"> 团队</a>
                         </li>
                         <li class="li-hamburger"><a data-scroll href="contact-chinese.html"
                                 class="int-collapse-menu">联系方式</a></li>
