--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -115,28 +115,29 @@
             <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
                 alt="city, kalisz, view" />
             <div class="label-photo">
-                Masterclass with Jury member Łukasz Byrdy in Canada
+                与评委卢卡斯·伯迪在加拿⼤的⼤师班
             </div>
         </div>
         <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
             <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
                 alt="city, kalisz, view" />
             <div class="label-photo">
-                Prizewinners' concert venue in Kalisz
+                卡利什获奖⾳乐会场地
             </div>
         </div>
 
         <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
             <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
             <div class="label-photo width-label">
-                Prizewinners' concert venue in Vienna
+                维也纳获奖⾳乐会场地
             </div>
         </div>
 
         <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
             <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
             <div class="label-photo">
-                Prizewinners' concert venue in Vienna
+                维也纳获奖⾳乐会场地
+
             </div>
         </div>
 
