menu border and href on flags

--- a/chinese-version/contact-chinese.html
+++ b/chinese-version/contact-chinese.html
@@ -108,8 +108,7 @@
 
                             <span class="bank-account-letters">KRS:</span> 0000933278 兹罗提账户: 57160014621808126950000001 </br>
                             欧元账户: </br> PL03 1600 1462 1808 1269 5000 0003 </br>
-                            <span class="bank-account-letters">SWIFT码</span> - PPABPLPKXXX </br> 如报名，请备注参赛者姓名
-                            者姓名， </br>以及组别(顺序如下) :
+                            <span class="bank-account-letters">SWIFT码</span> - PPABPLPKXXX </br> 如报名，请备注参赛者姓名者姓名， </br>以及组别(顺序如下) :
                         </div>
                     </div>
                 </div>
