--- a/chinese-version/jury.html
+++ b/chinese-version/jury.html
@@ -38,9 +38,9 @@
                             <li class="active"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a></li>
                         </ul>
                         <div class="languages">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
                                     src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag"
+                            <a href="../index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
                             <a href="chinese-version/index-chinese.html"><img class="img-flag"
                                     src="slider-images/icons8-china-48.png" /></a>
