--- a/chinese-version/jury.html
+++ b/chinese-version/jury.html
@@ -65,12 +65,9 @@
                             </li>
                         </ul>
                         <div class="languages-2">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag"
-                                    src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
