team - title chineese

--- a/chinese-version/team-chinese.html
+++ b/chinese-version/team-chinese.html
@@ -79,7 +79,7 @@
 
     <div class="team-container">
         <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-            <h1 class="h1-team">组委会</h1>
+            <h1 class="h1-team">团队</h1>
         </div>
         <div class="flex-team">
             <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
